# Medical-RAG-System

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: chunking.yaml  embeddings.yaml  rag.yaml  retrieval.yaml
data/: processed.dvc  raw.dvc
src/api/: main.py
src/core/: logging_config.py
src/experiments/: chunk_documents.py  embed_documents.py
src/ingestion/: document_cleaner.py  pdf_loader.py  run_ingestion.py
src/rag/: llm.py  prompt.py  rag_chain.py
src/retrieval/: hybrid_retriever.py  keyword_retriever.py  vector_retriever.py
tests/unit/: test_chunking.py  test_retrieval.py
