[project]
name = "medical-rag-system"
version = "0.1.0"
description = "Production-grade Medical RAG System"
requires-python = ">=3.12"

dependencies = [
    "langchain",
    "langchain-community",
    "fastapi",
    "uvicorn",
    "pydantic",
    "chromadb",
    "streamlit",
    "mlflow",
    "dvc",
    "pytest",
    "httpx",
    "pypdf>=6.6.0",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
